2009-09-16  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#138801 - Crash : hildon-home-74E6 observed

	* src/hd-incoming-events.c (hd_incoming_events_notified): Use
	g_signal_connect_object instead of g_signal_connect.

	* debian/changelog: Update.

2009-09-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.46
	* configure.ac: 0.3.46

2009-09-08  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#133861 - Led blinking for new sms/chat messages is not
	stopped when task switcher is opened

	* src/hd-incoming-events.c: Use Multi map for unperceived
	notifications to fix proper display of led pattern and disable led
	pattern as soon as task switcher is opened.

	* src/hd-multi-map.c (added):
	* src/hd-multi-map.h (added): Add multi map implementation.

	* src/hd-led-pattern.c (added):
	* src/hd-led-pattern.h (added): Add led pattern class.

	* src/Makefile.am: Add new files.

	* debian/changelog: Update.

2009-08-28  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.45
	* configure.ac: 0.3.45

2009-08-27  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#135486 - Logical string 'home_ti_select_shortcut' in layout
	mode (langauge: finnish)

	* src/hd-add-task-dialog.c (hd_add_task_dialog_init):
	* src/hd-applet-manager.c (items_configuration_loaded_cb): Use
	dgettext instead of gettext so it does not fail when an widget changes
	the default textdomain.

	* debian/changelog: Update.

2009-08-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.44
	* configure.ac: 0.3.44

2009-08-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#133876 - Add an icon for each preinstalled panorama image
	set to the 'change background' dialog

	* configure.ac:
	* debian/control: Add hildon-thumbnail dependency.

	* src/hd-change-background-dialog.c: Add thumbnails to Change
	background dialog.

	* debian/changelog: Update.

2009-08-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.43
	* configure.ac: 0.3.43
